--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,4 +1,4 @@
-.App{
+/* .App{
   border-left-color: green;
   border-left-width: 2em;
   text-align: center;
@@ -13,4 +13,4 @@
   grid-template-areas: "header header header" "a b c" ;
   grid-gap: 5px;}
 
-  
+   */
