--- a/src/components/LogoutButton/LogoutButton.module.css
+++ b/src/components/LogoutButton/LogoutButton.module.css
@@ -2,8 +2,10 @@
     border-radius: 10%;
     background-color:#38a98e !important;
     color: #ffffff ;
-    font-size: 50px;
-    padding: 0.5em;
+    font-size: 1em;
+    padding: 0.1em;
+    height: 3em !important;
+    margin-top:1vw;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
   }
   
