--- a/src/components/CoachDashboard/CoachDashboard.module.css
+++ b/src/components/CoachDashboard/CoachDashboard.module.css
@@ -1,5 +1,11 @@
-.tablecontainer{
-    margin-left: 25%;
-    margin-right: auto;
-    width: 50%;
+.tablecontainer {
+  margin-left: 25%;
+  margin-right: auto;
+  width: 50%;
+  position: absolute;
+  left: 100px;
+}
+
+.header {
+  margin-left: 20%;
 }
