--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,31 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.container {position: absolute;
-  width: 337px;
-  height: 273px;
-  left: 1069px;
-  top: 617px;
-  
-  background: #FFFFFF;
+.container {
+  margin: 2em;
+  width: fit-content;
+  height: fit-content;
+  background: #ffffff;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;}
+  border-radius: 2em;
+}
 
-  
+.top-container {
+  margin: 5em;
+  width: fit-content;
+  height: fit-content;
+  background: #ffffff;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 0px 2em 2em;
+}
