--- a/src/components/CoachDashboard/CoachDashboard.module.css
+++ b/src/components/CoachDashboard/CoachDashboard.module.css
@@ -1,17 +1,17 @@
-.tablecontainer {
+.list {
   margin-left: 25%;
   margin-right: auto;
   width: 50%;
-  position: absolute;
   left: 100px;
 }
 
-.header {
-  margin-left: 200%;
-}
-
-.tableTitle {
+.title {
   margin: 0.5em 0;
   text-align: center;
   font-size: x-large;
+}
+
+.dashboard {
+  display: flex;
+  flex-wrap: wrap;
 }
