--- a/src/index.css
+++ b/src/index.css
@@ -13,15 +13,17 @@ code {
 }
 
 .container {
-  margin: 2em;
-  width: fit-content;
-  height: fit-content;
+  overflow: auto;
+  margin: 2.5em;
+  width: 20vw;
+  height: 35vh;
   background: #ffffff;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
-  border-radius: 2em;
+  border-radius: 0.5em;
 }
 
 .top-container {
+  overflow: auto;
   margin: 5em;
   width: fit-content;
   height: fit-content;
