--- a/src/components/Timeline/Timeline.module.css
+++ b/src/components/Timeline/Timeline.module.css
@@ -1,14 +1,8 @@
-$screen-sm-min : 768px;
-$light-blue : #03a9f4;
 body {
-  font-size: 14px;
   overflow-x:hidden;
-  background: linear-gradient(to bottom, rgba(255,255,255,.9), rgba(255,255,255,1) 7%, rgba(204, 204, 204, .8) 7%, rgba(238, 238, 238,.92)
- 8%,rgba(238, 238, 238,.9)), url(http://previews.123rf.com/images/egorzem/egorzem1502/egorzem150200017/36422240-Abstract-3d-geometric-background-White-seamless-texture-with--Stock-Photo.jpg);
-  header {
-    text-align: center;
+  /* header { */
     
-    .grad-over {
+    /* .grad-over {
       font-size: 3em;
       font-weight: bold;
       position: relative;
@@ -29,43 +23,38 @@ body {
       &:hover:after {
         left: -100%;
       }
-    }
+    } */
   }
   
-  #timeline-wrapper {
-    .timeline-top {
-     // background-color: hotpink;
-      text-align: center;
-      .top-year {
-        display:inline-block;
-        width: 80px;
-        height:80px;
-        border-radius: 40px;
-        background-color: $light-blue;
-        color: #fff;
-        line-height: 80px;
-        text-align: center;
-        font-size: 2.8rem;
-        &>span {
-          font-size: 3rem
-        }
-      }
-    }
-    .timeline-block {
-      width: 100%;
-      height: auto;
-      position: relative;
-      //background: linear-gradient(to right, #eee,#eee 50%, rgba(225,225,225,1) 50%, rgba(225,225,225,1));
-      &:after {
-        content: "";
-        position: absolute;
-        width: 4px;
-        height: 100%;
-        background-color: $light-blue;
-        left: 50%;
-        top: 0;
-        margin-left: -2px;
-      }
+  /* .timelineWrapper {
+  } */
+  .topWeek {
+    display:inline-block;
+    width: 80px;
+    height:80px;
+    border-radius: 40px;
+    background-color: blue;
+    color: #fff;
+    line-height: 80px;
+    text-align: center;
+    font-size: 2.8rem;
+  }
+  timelineBlock:after {
+    content: "";
+    position: absolute;
+    width: 4px;
+    height: 100%;
+    background-color: blue;
+    left: 50%;
+    top: 0;
+    margin-left: -2px;
+  }
+  .timelineBlock {
+    width: 100%;
+    height: auto;
+    position: relative;
+  .timelineTop {
+    text-align: center;
       
       .timeline-events {
         .l-event {
