added image on login page, added uuid keys, deleted unnecessary files from CRI, installed dotenv, styled coach dashboard with one random energiser

--- a/src/components/CoachDashboard/CoachDashboard.module.css
+++ b/src/components/CoachDashboard/CoachDashboard.module.css
@@ -15,3 +15,12 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.energiser {
+  padding: 1em;
+}
+
+.energiserName {
+  margin-top: 1em;
+  font-size: large;
+}
