changed colour scheme

--- a/src/components/LogoutButton/LogoutButton.module.css
+++ b/src/components/LogoutButton/LogoutButton.module.css
@@ -1,6 +1,6 @@
 .Button {
   border-radius: 10%;
-  background-color: #31986a !important;
+  background-color: #1d5b40 !important;
   color: #ffffff;
   font-size: 1em;
   padding: 0.1em;
