--- a/src/components/LoginPage/LoginPage.module.css
+++ b/src/components/LoginPage/LoginPage.module.css
@@ -16,7 +16,7 @@
 
 .title {
   background-color: #e3e5e5;
-  color: #31986a;
+  color: #1d5b40;
   font-family: sans-serif;
   font-style: medium;
   font-size: 10em;
@@ -35,7 +35,7 @@
 }
 
 .banner {
-  background-color: #31986a;
+  background-color: #1d5b40;
   position: fixed;
   width: 100%;
   left: 0;
