--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,13 @@ code {
 li {
   list-style-type: none;
 }
+
+.smallContainer {
+  overflow: auto;
+  margin:4.2vw;
+  width: 30vw;
+  height: auto;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px 20px 20px 20px;
+}
