--- a/src/index.css
+++ b/src/index.css
@@ -36,11 +36,15 @@ li {
 }
 
 .smallContainer {
-  overflow: auto;
-  margin:4.2vw;
+  margin: 0 4.2vw;
   width: 30vw;
   height: auto;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px 20px 20px 20px;
+  border-radius: 10px 10px 10px 10px;
+}
+
+.dots{
+  width: 35px;
+  height: 35px;
 }
