--- a/src/components/NameIcon/NameIcon.module.css
+++ b/src/components/NameIcon/NameIcon.module.css
@@ -6,3 +6,13 @@
   justify-content: center;
   align-items: center;
 }
+
+/* .icon:hover .name {
+  visibility: visible;
+  opacity: 1;
+}
+.name{
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity .2s, visibility .2s;
+} */
