--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffffff !important;
 }
 
 code {
@@ -36,15 +37,22 @@ li {
 }
 
 .smallContainer {
-  margin: 0 4.2vw;
-  width: 30vw;
+  /* margin:0 2.5vw; */
+  display: flex;
+  justify-content: center;
+  /* align-items: center;
+  width: 30vw; */
+  padding: 0.5vw ;
   height: auto;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px 10px 10px 10px;
 }
 
-.dots{
-  width: 35px;
-  height: 35px;
+.dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
 }
