--- a/src/components/BootcamperDashboard/BootcamperDashboard.module.css
+++ b/src/components/BootcamperDashboard/BootcamperDashboard.module.css
@@ -1,18 +1,28 @@
 .list {
-    margin-left: 25%;
-    margin-right: auto;
-    width: 50%;
-    left: 100px;
-  }
-  
-  .title {
-    margin: 0.5em 0;
-    text-align: center;
-    font-size: x-large;
-  }
-  
-  .dashboard {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
+  margin-left: 25%;
+  margin-right: auto;
+  width: 50%;
+  left: 100px;
+}
+
+.title {
+  margin: 0.5em 0;
+  text-align: center;
+  font-size: x-large;
+}
+
+.dashboard {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mainTitle {
+  background-color: #e3e5e5;
+  color: #1d5b40;
+  font-family: sans-serif;
+  font-style: medium;
+  font-size: 10em;
+  letter-spacing: -4%;
+  text-align: center;
+  vertical-align: top;
+}
