--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,3 +1,30 @@
-.navbar{
-    position: fixed;
+.navbar {
+  position: fixed;
+  border-right: 1px solid #00675b;
+}
+
+.link {
+  width: 100%;
+  height: 4em;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  font-weight: bold;
+  font-family: "Josefin Sans";
+  font-size: larger;
+  border-right: 1em solid #fff;
+}
+
+.selected {
+  background-color: #c1dad7;
+  border-right: 1em solid #00675b;
+}
+
+.icon {
+  width: 1em;
+  height: 1em;
+  margin: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
