log out button slightly larger, titles for all the pages

--- a/src/components/EnergisersPage/EnergisersPage.module.css
+++ b/src/components/EnergisersPage/EnergisersPage.module.css
@@ -12,3 +12,13 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.mainTitle {
+  font-family: 'Cardo';
+  font-style: medium;
+  font-size: 8rem;
+  margin-left: 0.5em;
+  letter-spacing: -4%;
+  vertical-align: top;
+  margin-bottom: 0.25em;
+}
