--- a/src/components/Timeline/Timeline.module.css
+++ b/src/components/Timeline/Timeline.module.css
@@ -1,3 +1,13 @@
+.mainTitle {
+  font-family: 'Cardo';
+  font-style: medium;
+  font-size: 8rem;
+  margin-left: 0.5em;
+  letter-spacing: -4%;
+  vertical-align: top;
+  margin-bottom: 0.25em;
+}
+
 /* body {
   overflow-x: hidden;
 }
