--- a/src/components/ListItem/ListItem.module.css
+++ b/src/components/ListItem/ListItem.module.css
@@ -1,12 +1,22 @@
 .ListItemContainer {
-    width: 400px;
-    border: 2px solid #158001;
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 30px;
-    margin: 1em 0;
-  }
+  width: 400px;
+  border: 2px solid #158001;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 30px;
+  margin: 1em 0;
+}
+
+.link {
+  color: blue;
+  text-decoration: underline;
+}
+
+.link:visited {
+  color: #800000;
+  text-decoration: underline;
+}
