--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -1,11 +1,12 @@
 .container {
   background: #ffffff;
   box-shadow: 0px 2px 3px #00675b;
-  border-radius: 5px;
+  border-radius: 0.4em;
   display: flex;
   align-items: center;
   font-family: "Josefin sans";
   padding: 0.5rem;
+  margin: 1em 0;
 }
 
 .date {
