title for the event list

--- a/src/Pages/BootcamperDashboard/BootcamperDashboard.module.css
+++ b/src/Pages/BootcamperDashboard/BootcamperDashboard.module.css
@@ -25,3 +25,13 @@
   vertical-align: top;
   margin-bottom: 0.25em;
 }
+
+.secondaryTitle {
+  font-family: 'Cardo';
+  font-style: medium;
+  font-size: 8rem;
+  margin-left: 0.5em;
+  letter-spacing: -4%;
+  vertical-align: top;
+  margin-bottom: 0.25em;
+}
