--- a/src/components/PinBoard/PinBoard.module.css
+++ b/src/components/PinBoard/PinBoard.module.css
@@ -1,7 +1,8 @@
 .pinBoard {
   background-image: url("https://i.ibb.co/ysJnjxJ/pinboard.jpg");
   width: 65vw;
-  height: 80vh;
+  min-height: 80vh;
+  height: auto;
   padding: 1em;
   margin-left: 3.5em;
   display: flex;
@@ -30,7 +31,7 @@
 }
 
 .stickyNote {
-  width: 20vw;
-  height: 20vw;
+  width: 10vw;
+  height: 10vw;
   box-shadow: 0 0.5em 0.5em 0;
 }
