--- a/src/components/StickyNote/StickyNote.module.css
+++ b/src/components/StickyNote/StickyNote.module.css
@@ -4,24 +4,26 @@
   grid-template-rows: 10% 10% 20% 20% 20% 10% 10%;
   background-color: #fdfd86;
   line-height: 1;
-  text-align: center;
-  width: 20vw;
-  height: 20vw;
+  text-align: left;
+  width: 225px;
+  height: 225px;
   margin: 25px;
   box-shadow: 0 0.5em 0.5em 0;
+  padding: 1em;
 }
 
 .removeButton {
-  background: white;
+  background: lightgrey;
   border-radius: 8px;
   font-size: 1.5em;
-  padding: 0.5em 0.5em;
-  margin: 0.5em;
+  padding: 0.1em 0.3em;
+  margin: auto;
+  text-align: center;
 }
 
 .noteText {
   grid-column-start: 2;
-  grid-column-end: 4;
+  grid-column-end: 6;
   grid-row-end: 5;
   grid-row-start: 3;
 }
