--- a/src/components/PinBoard/PinBoard.module.css
+++ b/src/components/PinBoard/PinBoard.module.css
@@ -20,10 +20,12 @@
 }
 
 .submitNoteButton {
-  background: white;
+  background: lightgrey;
   border-radius: 8px;
   font-size: 1.5em;
-  padding: 0.05em 0.5em;
+  padding: 0.1em 0.3em;
+  margin: auto;
+  text-align: center;
 }
 
 .noteInput {
@@ -31,7 +33,15 @@
 }
 
 .stickyNote {
-  width: 10vw;
-  height: 10vw;
+  display: grid;
+  grid-template-columns: 10% 10% 20% 20% 20% 10% 10%;
+  grid-template-rows: 10% 10% 20% 20% 20% 10% 10%;
+  background-color: #fdfd86;
+  line-height: 1;
+  text-align: left;
+  width: 225px;
+  height: 225px;
+  margin: 25px;
   box-shadow: 0 0.5em 0.5em 0;
+  padding: 1em;
 }
