--- a/src/components/PinBoard/PinBoard.module.css
+++ b/src/components/PinBoard/PinBoard.module.css
@@ -15,7 +15,7 @@
   font-size: 2em;
   max-width: 8vw;
   max-height: 8vh;
-  padding: 0 0.5em;
+  padding: 0 0.5em 0.15em 0.5em;
   align-items: right;
 }
 
