--- a/src/components/StickyNote/StickyNote.module.css
+++ b/src/components/StickyNote/StickyNote.module.css
@@ -24,10 +24,11 @@
 .noteText {
   grid-column-start: 2;
   grid-column-end: 6;
-  grid-row-end: 5;
+  grid-row-end: 5; /* change here to make the notes longer to 6*/
   grid-row-start: 3;
   font-family: courgette;
   background-color: inherit;
+  resize: none;
 }
 
 .noteText:focus {
