--- a/src/Pages/ReadingListPage/ReadingListPage.module.css
+++ b/src/Pages/ReadingListPage/ReadingListPage.module.css
@@ -16,10 +16,14 @@
   letter-spacing: -4%;
   vertical-align: top;
   margin-bottom: 0.25em;
+  
 }
 
 .main {
   margin-left: 3em;
+  border: 1px solid;
+  padding: 10vh;
+  
 }
 
 .data {
