--- a/src/components/StickyNote/StickyNote.module.css
+++ b/src/components/StickyNote/StickyNote.module.css
@@ -23,8 +23,8 @@
 
 .noteText {
   grid-column-start: 2;
-  grid-column-end: 6;
-  grid-row-end: 5; /* change here to make the notes longer to 6*/
+  grid-column-end: 7;
+  grid-row-end: 7;
   grid-row-start: 3;
   font-family: courgette;
   background-color: inherit;
