--- a/src/Pages/BootcamperList/BootcamperList.module.css
+++ b/src/Pages/BootcamperList/BootcamperList.module.css
@@ -8,6 +8,7 @@
 .main {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .avatar {
@@ -19,4 +20,18 @@
 }
 
 .link {
+}
+
+.fakeButtonContainer {
+  padding: 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.fakeButton {
+  border: 2px solid;
+  border-color: #00675b;
+  font-weight: bold;
+  padding: 0.75em;
 }
