--- a/src/components/LogoutButton/LogoutButton.module.css
+++ b/src/components/LogoutButton/LogoutButton.module.css
@@ -4,7 +4,7 @@
   font-weight: bold;
   text-decoration: underline;
   font-family: "Josefin Sans";
-  font-size: larger;
+  font-size: large;
 }
 
 .Button {
