--- a/src/Pages/BootcamperPairsList/BootcamperPairsList.module.css
+++ b/src/Pages/BootcamperPairsList/BootcamperPairsList.module.css
@@ -9,7 +9,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-around;
 }
 
@@ -39,4 +39,20 @@
 .buttonRight {
   float: right;
   margin-right: 5em;
+}
+
+.image {
+  width: 30vw;
+  height: 25vw;
+
+  margin-right: 5em;
+}
+
+.bootcampersList {
+  width: 50vw;
+}
+
+.content {
+  display: flex;
+  align-items: space-around;
 }
