Bootcamper 4 and 8 pages styled with image

--- a/src/Pages/BootcamperPairsList/BootcamperPairsList.module.css
+++ b/src/Pages/BootcamperPairsList/BootcamperPairsList.module.css
@@ -9,7 +9,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: left;
   justify-content: space-around;
 }
 
