--- a/src/Pages/Timeline/Timeline.module.css
+++ b/src/Pages/Timeline/Timeline.module.css
@@ -7,34 +7,43 @@
   vertical-align: top;
   margin-bottom: 0.25em;
 }
-.timeLine {
-  position: left;
-  margin-left: 20%;
-}
 
 .littleDot {
   align-self: center !important;
 }
 
-.sContainer {
+.smallContainer {
   display: flex;
-  border: 1px solid;
-  border-color: aqua;
+  align-items: flex-start;
+  justify-content: flex-start;
   margin: 6.25em 0 2em -0.75em;
-  border-width: 3px;
+  background-color: #c1dad7;
+  border-width: 4px;
+  border-radius: 0.6em;
   border-top-left-radius: 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.imageBox {
+  border-right: 1px solid white;
+  padding: 1em 1em 0 1em;
 }
 
 .image {
-  height: 50px;
-  margin-left: auto;
-  order: 2;
+  width: 3em;
 }
-.list {
-  padding: 2em;
-  display: grid;
-  align-items: center;
+
+.textBox {
+  padding: 1em;
+  font-family: 'Josefin sans';
 }
-.topicTitle {
-  position: center;
+
+.topic {
+  font-size: larger;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+
+.topicList {
+  padding-left: 2em;
 }
