--- a/src/Pages/LoginPage/LoginPage.module.css
+++ b/src/Pages/LoginPage/LoginPage.module.css
@@ -1,10 +1,12 @@
 .background {
-  background-color: #e3e5e5;
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
+  display: grid;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+  grid-template-columns: 20% 10% 40% 10% 20%;
 }
 
 .logo {
@@ -15,31 +17,34 @@
 }
 
 .title {
-  background-color: #e3e5e5;
-  color: #1d5b40;
-  font-family: sans-serif;
+  font-family: "Cardo";
   font-style: medium;
   font-size: 10em;
   letter-spacing: -4%;
   text-align: center;
+  letter-spacing: -4%;
   vertical-align: top;
+  grid-column-start: 3;
+  grid-column-end: 4;
 }
 
 .buttonAlign {
-  position: absolute;
-  vertical-align: bottom;
-  left: 50%;
-  margin-top: 13em;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  margin-left: 35%;
+  align-items: center;
+  margin-top: 15%;
+  grid-row-start: 3;
+  grid-column-start: 3;
 }
 
 .banner {
-  background-color: #1d5b40;
+  border-top: 0.15em solid;
+  border-color: #00675b;
   position: fixed;
   width: 100%;
   left: 0;
   bottom: 0;
   height: 40%;
   z-index: -1;
+  grid-row-start: 4;
+  grid-row-end: 5;
 }
