--- a/src/components/LoginButton/LoginButton.module.css
+++ b/src/components/LoginButton/LoginButton.module.css
@@ -23,10 +23,9 @@ Button:hover {
 }*/
 
 .Button {
-  border-radius: 10%;
   background-color: #ffffff !important;
-  color: #1d5b40;
+  border: 0.05em solid;
+  border-color: #1d5b40;
   font-size: 50px;
   padding: 0.5em;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
 }
