--- a/src/Pages/CoachDashboard/CoachDashboard.module.css
+++ b/src/Pages/CoachDashboard/CoachDashboard.module.css
@@ -61,11 +61,11 @@
 .secondaryTitle {
   font-family: "Cardo";
   font-style: medium;
-  font-size: 8rem;
-  margin-left: 0.5em;
+  font-size: 4rem;
   letter-spacing: -4%;
   vertical-align: top;
-  margin-bottom: 0.25em;
+  margin-bottom: 0.5em;
+  margin-top: 1em;
 }
 
 .energiserLink {
