--- a/src/Pages/Timeline/Timeline.module.css
+++ b/src/Pages/Timeline/Timeline.module.css
@@ -1,3 +1,18 @@
+.toggle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: small;
+  float: right;
+  margin-right: 5vw;
+}
+
+.switch {
+  margin-bottom: 0.5em;
+  padding-left: 1.5em;
+}
+
 .mainTitle {
   font-family: "Cardo";
   font-style: medium;
@@ -8,24 +23,35 @@
   margin-bottom: 0.25em;
 }
 
+.timeLine {
+  margin-top: 15vh;
+}
+
 .littleDot {
   align-self: center !important;
 }
 
+.highlighted {
+  font-weight: 600;
+}
+.graydOut {
+  color: #7a7a7a;
+}
+
 .smallContainer {
   display: flex;
-  align-items: flex-start;
+  align-items: stretch;
   justify-content: flex-start;
   margin: 6.25em 0 2em -0.75em;
-  background-color: #c1dad7;
+  background-color: #f0f0f0;
   border-width: 4px;
   border-radius: 0.6em;
-  border-top-left-radius: 0;
+  /* border-top-left-radius: 0; */
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .imageBox {
-  border-right: 1px solid white;
+  border-right: 1px solid #7a7a7a;
   padding: 1em 1em 0 1em;
 }
 
@@ -35,7 +61,7 @@
 
 .textBox {
   padding: 1em;
-  font-family: 'Josefin sans';
+  font-family: "Josefin sans";
 }
 
 .topic {
