--- a/src/Pages/GarticPage/GarticPage.module.css
+++ b/src/Pages/GarticPage/GarticPage.module.css
@@ -10,10 +10,34 @@
 .link {
   color: blue;
   cursor: pointer;
-}
-.link:hover {
+  font-size: x-large;
   text-decoration: underline;
 }
+
+.garticDescription {
+  border: 3px solid royalblue;
+  width:  50vw;
+  padding: 1rem;
+ 
+}
 .body {
-  background-color: pink;
+  background-color: #F3DE99
+}
+img {
+  width: 50vw;
+  height: auto;
+  object-fit: 3;
+  border: 1px solid 
+}
+.garticLogo{
+  width:  10vw;
+  height: auto;
+ 
+ 
+}
+.content{
+  display: flex;
+  flex-direction: column;
+ align-items: center;
+
 }
