--- a/src/Pages/GarticPage/GarticPage.module.css
+++ b/src/Pages/GarticPage/GarticPage.module.css
@@ -12,32 +12,50 @@
   cursor: pointer;
   font-size: x-large;
   text-decoration: underline;
+  margin-bottom: 2rem;
 }
 
 .garticDescription {
   border: 3px solid royalblue;
   width:  50vw;
   padding: 1rem;
+  border-radius: 2em;
+  padding: 2em;
+  margin-bottom: 4rem;
  
 }
-.body {
-  background-color: #F3DE99
-}
-img {
+
+.garticImage {
   width: 50vw;
   height: auto;
   object-fit: 3;
-  border: 1px solid 
+  margin-bottom: 4rem;
+
 }
 .garticLogo{
   width:  10vw;
   height: auto;
- 
- 
+  float: right;
+  padding: 1em 1em 0 1em; 
+   margin-bottom: 2rem;
+  padding-bottom: 1em;
+  border-radius: 2em;
+  
 }
+ 
+ 
+
 .content{
   display: flex;
   flex-direction: column;
  align-items: center;
+
+}
+.header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+ 
+
 
 }
