--- a/src/Pages/GarticPage/GarticPage.module.css
+++ b/src/Pages/GarticPage/GarticPage.module.css
@@ -17,12 +17,11 @@
 
 .garticDescription {
   border: 3px solid royalblue;
-  width:  50vw;
+  width: 50vw;
   padding: 1rem;
   border-radius: 2em;
   padding: 2em;
   margin-bottom: 4rem;
- 
 }
 
 .garticImage {
@@ -30,32 +29,42 @@
   height: auto;
   object-fit: 3;
   margin-bottom: 4rem;
-
 }
-.garticLogo{
-  width:  10vw;
+.garticLogo {
+  width: 10vw;
   height: auto;
   float: right;
-  padding: 1em 1em 0 1em; 
-   margin-bottom: 2rem;
+  padding: 1em 1em 0 1em;
+  margin-bottom: 2rem;
   padding-bottom: 1em;
   border-radius: 2em;
-  
 }
- 
- 
 
-.content{
+.content {
   display: flex;
   flex-direction: column;
- align-items: center;
-
+  align-items: center;
 }
 .header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
- 
+}
 
+.body {
+  display: block;
+  position: relative;
+  z-index: 1;
+}
 
+.body::after {
+  content: "";
+  background: url("https://i.ibb.co/djGMmMV/splash.jpg");
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1 !important;
 }
