gartic page has an image as background, the image is set in Layout.module.css on line 10

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,9 +1,32 @@
-.layout{
-    display: grid;
-    grid-template-columns: 20rem auto;
-
+.mainArt {
+  grid-column-start: 2;
+  display: block;
+  position: relative;
+  padding-left: 5rem;
 }
 
-.main{
-    grid-column-start: 2;
+.mainArt::after {
+  content: "";
+  background: url("https://i.ibb.co/djGMmMV/splash.jpg");
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1 !important;
+}
+
+.layoutArt {
+  display: grid;
+  grid-template-columns: 15rem auto;
+}
+
+.layout {
+  display: grid;
+  grid-template-columns: 20rem auto;
+}
+
+.main {
+  grid-column-start: 2;
 }
