--- a/src/Pages/EnergisersPage/EnergisersPage.module.css
+++ b/src/Pages/EnergisersPage/EnergisersPage.module.css
@@ -12,8 +12,10 @@
   display: flex;
   border: 2px solid;
   margin-top: 1em;
+  margin-bottom: 2.5em;
   border-radius: 1em;
 margin-right: 3em;
+box-shadow: 0 2px 2px  0
 }
 
 .main {
