--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -2,7 +2,9 @@
   grid-column-start: 2;
   display: block;
   position: relative;
-  padding-left: 5rem;
+  padding-left: 7.5rem;
+  padding-right: 7.5rem;
+
 }
 
 .mainImageAfter {
@@ -22,9 +24,11 @@
 
 .layout {
   display: grid;
-  grid-template-columns: 20rem auto;
+  grid-template-columns: 15rem auto;
 }
 
 .main {
   grid-column-start: 2;
+  padding-right: 7.5rem;
+  padding-left: 7.5rem;
 }
