--- a/src/components/PinBoard/PinBoard.module.css
+++ b/src/components/PinBoard/PinBoard.module.css
@@ -6,6 +6,8 @@
   padding: 1em;
   display: flex;
   flex-wrap: wrap;
+  box-shadow: 0px 3px 4px #00675b;
+  border-radius: 0.4em;
 }
 
 .addNoteButton {
