CSS applied to groups of 8 page

--- a/src/Pages/BootcamperEightsList/BootcamperEightsList.module.css
+++ b/src/Pages/BootcamperEightsList/BootcamperEightsList.module.css
@@ -4,6 +4,7 @@
   font-size: 5rem;
   letter-spacing: -4%;
   vertical-align: top;
+  margin-bottom: -0.5em;
 }
 
 .main {
@@ -14,16 +15,23 @@
 }
 
 .avatar {
-  width: 6em;
-  height: auto;
+  grid-column-start: 1;
+  grid-row: span 4;
+  margin-top: 25%;
 }
 
 .pairs {
   padding: 1em 0 1em 0;
+  display: grid;
+  grid-template-columns: 30% 70%;
 }
 
 .secondaryTitle {
+  font-family: "Cardo";
   font-size: 4em;
+  margin: auto;
+  align-self: baseline;
+  margin-top: 1.8rem;
 }
 
 .link {
@@ -34,6 +42,13 @@
   border-color: #00675b;
   font-weight: bold;
   padding: 0.75em;
+  margin-top: 3rem;
+}
+
+.alignment {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .buttonRight {
@@ -42,17 +57,23 @@
 }
 
 .image {
-  width: 40vw;
-  height: 25vw;
-
-  margin-right: 5em;
+  width: 45vw;
+  height: auto;
+  justify-self: center;
+  margin-top: 3em;
+  margin-left: 10%;
 }
 
 .bootcampersList {
-  width: 50vw;
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
 }
 
 .content {
-  display: flex;
-  align-items: space-around;
+  width: 120%;
+}
+
+.bootcamper {
+  grid-column-start: 2;
 }
