--- a/src/Pages/BootcamperFoursList/BootcamperFoursList.module.css
+++ b/src/Pages/BootcamperFoursList/BootcamperFoursList.module.css
@@ -4,7 +4,7 @@
   font-size: 5rem;
   letter-spacing: -4%;
   vertical-align: top;
-  margin-bottom: -0.5em ;
+  margin-bottom: -0.5em;
 }
 
 .main {
@@ -17,25 +17,26 @@
 .avatar {
   grid-column-start: 1;
   grid-row: span 4;
-margin-top:25%;
+  align-self: center;
+  justify-self: center;
 }
 
 .pairs {
   padding: 1em 0 1em 0;
   display: grid;
-grid-template-columns: 30% 70%;
-
+  grid-template-columns: 30% 70%;
+  border: 3px solid white;
+  box-shadow: 0 3px 3px 0;
+  border-radius: 1em;
+  margin: 2vw;
 }
 
 .secondaryTitle {
   font-family: "Cardo";
   font-size: 4em;
- margin: auto; 
- align-self: baseline;
- margin-top: 1.8rem;
-}
-
-.link {
+  margin: auto;
+  align-self: baseline;
+  margin-top: 1.8rem;
 }
 
 .button {
@@ -44,9 +45,8 @@ grid-template-columns: 30% 70%;
   font-weight: bold;
   padding: 0.75em;
   margin-top: 3rem;
-  
 }
-.alignment{
+.alignment {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
@@ -61,22 +61,21 @@ grid-template-columns: 30% 70%;
   width: 45vw;
   height: auto;
   justify-self: center;
-margin-top: 3em;
-  margin-left:10%;
+  margin-top: 3em;
+  margin-left: 10%;
 }
 
 .bootcampersList {
   margin-top: 3rem;
-  display:grid;
-  grid-template-columns: 30% 30% 30% ;
-
+  display: grid;
+  grid-template-columns: 28% 28% 28%;
+  margin-left: -1.8em;
 }
 
-.content { 
-width: 120%;}
+.content {
+  width: 120%;
+}
 
-
-.bootcamper{
+.bootcamper {
   grid-column-start: 2;
 }
-
