CSS copied to bootcamper pairs. Colour arrays updated in bootcamper groups of 8 page

--- a/src/Pages/BootcamperPairsList/BootcamperPairsList.module.css
+++ b/src/Pages/BootcamperPairsList/BootcamperPairsList.module.css
@@ -16,14 +16,19 @@
 
 .avatar {
   grid-column-start: 1;
-  grid-row: span 4;
-  margin-top: 25%;
+  grid-row: 1 / span 4;
+  align-self: center;
+  justify-self: center;
 }
 
 .pairs {
   padding: 1em 0 1em 0;
   display: grid;
   grid-template-columns: 30% 70%;
+  border: 3px solid white;
+  box-shadow: 0 3px 3px 0;
+  border-radius: 1em;
+  margin: 2vw;
 }
 
 .secondaryTitle {
@@ -68,6 +73,7 @@
   margin-top: 3rem;
   display: grid;
   grid-template-columns: 30% 30% 30%;
+  margin-left: -1.8em;
 }
 
 .content {
