--- a/src/Pages/LoginPage/LoginPage.module.css
+++ b/src/Pages/LoginPage/LoginPage.module.css
@@ -17,7 +17,7 @@
 }
 
 .title {
-  font-family: "Cardo";
+  font-family: 'Zen Antique', serif;
   font-style: medium;
   font-size: 7.5em;
   letter-spacing: -4%;
@@ -26,6 +26,7 @@
   vertical-align: top;
   grid-column-start: 3;
   grid-column-end: auto;
+  margin-top: 0.5em;
 }
 
 .buttonAlign {
@@ -48,5 +49,6 @@
   z-index: -1;
   grid-row-start: 4;
   grid-row-end: 5;
+  background-color: #112a12;
   
 }
