--- a/src/Pages/EnergisersPage/EnergisersPage.module.css
+++ b/src/Pages/EnergisersPage/EnergisersPage.module.css
@@ -10,12 +10,13 @@
   grid-column-end: end;
   justify-content: center;
   display: flex;
-  border: 2px solid;
+  border: 3px solid;
   margin-top: 1em;
   margin-bottom: 2.5em;
   border-radius: 1em;
-margin-right: 3em;
-box-shadow: 0 2px 2px  0
+  margin-right: 3em;
+  box-shadow: 0 3px 3px 0;
+  height: 25vh;
 }
 
 .main {
@@ -27,15 +28,14 @@ box-shadow: 0 2px 2px  0
   font-family: "Cardo";
   font-style: medium;
   font-size: 5rem;
-  margin-left: 0.5em;
   letter-spacing: -4%;
   vertical-align: top;
   margin-bottom: 0.25em;
 }
 
 .image {
-  width: 25vw;
-  height: auto;
+  width: auto;
+  height: 20vh;
   border-radius: 1em;
 }
 
@@ -43,17 +43,17 @@ box-shadow: 0 2px 2px  0
   border: 0.1em solid;
   border-color: #00675b;
   font-size: 1.5em;
-  margin-right: auto;
-  margin-left: 20%;
+  margin-right: 20%;
+  margin-left: auto;
   margin-top: auto;
   margin-bottom: auto;
   padding: 1em;
   width: 15vw;
   text-align: center;
   border-radius: 1em;
+  box-shadow: 0 3px 3px 0;
 }
 
 .link:hover {
   background-color: rgb(193, 218, 215, 0.3);
- 
 }
