--- a/src/Pages/LectureRecordingsPage/LectureRecordingsPage.module.css
+++ b/src/Pages/LectureRecordingsPage/LectureRecordingsPage.module.css
@@ -1,12 +1,11 @@
 .link {
-  color: blue;
-  text-decoration: underline;
+  grid-column: 2;
 }
 
-.link:visited {
+/*.link:visited {
   color: #800000;
   text-decoration: underline;
-}
+} */
 
 .mainTitle {
   font-family: "Cardo";
@@ -21,13 +20,36 @@
 }
 
 .recordingDetails {
-  padding-top: 1.5em;
+  /* padding-top: 1.5em;
   padding-bottom: 1.5em;
+  line-height: 2; */
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+.recordings {
+  padding: 1.5em;
   line-height: 2;
+  border: 3px solid;
+  border-radius: 1em;
+  background-color: #f1f2f4;
+  margin: 1.5em;
 }
 
 .title {
   font-size: 1.2em;
   text-decoration: underline;
   font-weight: bold;
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.thumbnail {
+  width: 25vw;
+  grid-column: 2;
+  border-radius: 1em;
+  margin-left: 1em;
+}
+
+.recordingText {
+  grid-column: 1;
 }
