--- a/src/Pages/GarticPage/GarticPage.module.css
+++ b/src/Pages/GarticPage/GarticPage.module.css
@@ -13,6 +13,7 @@
   font-size: x-large;
   text-decoration: underline;
   margin-bottom: 2rem;
+  font-weight: bold;
 }
 
 .garticDescription {
@@ -22,7 +23,8 @@
   border-radius: 2em;
   padding: 2em;
   margin-bottom: 4rem;
-  background-color: white ;
+  background-color: white;
+  line-height: 5;
 }
 
 .garticImage {
@@ -30,6 +32,7 @@
   height: auto;
   object-fit: 3;
   margin-bottom: 4rem;
+  border-radius: 2em;
 }
 .garticLogo {
   width: 10vw;
