--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -6,8 +6,7 @@
   align-items: center;
   font-family: "Josefin sans";
   padding: 0.5rem;
-  margin: 2.5em 0;
-
+  margin-bottom: 2.5em;
 }
 
 .date {
