--- a/src/Pages/BootcamperList/BootcamperList.module.css
+++ b/src/Pages/BootcamperList/BootcamperList.module.css
@@ -6,26 +6,37 @@
   vertical-align: top;
 }
 .main {
-  display: flex;
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: 28% 28% 28%;
+  margin-left: -1.8em;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 .avatar {
-  width: 6em;
+  width: 3em;
   height: auto;
+  border-radius: 50%;
+  border: 2px solid #000000;;
+  align-self: center;
+  justify-self: center;
 }
 
 .bootcamper {
-  display: flex;
+  padding: 1em;
+  display: grid;
   justify-content: space-between;
+  grid-template-columns: 30% 70%;
   width: 20vw;
   align-items: center;
-  margin: 1.5em;
+  margin: 1em;
+  border-radius: 1em;
+  border: 3px solid #00675b;
+  background: rgb(174, 206, 225, 30%);
 }
 
-.link {
-}
 
 .fakeButtonContainer {
   padding: 2em;
