--- a/src/Pages/BootcamperDashboard/BootcamperDashboard.module.css
+++ b/src/Pages/BootcamperDashboard/BootcamperDashboard.module.css
@@ -25,13 +25,14 @@
   vertical-align: top;
 }
 
-.subTitle {
+.secondaryTitle {
   font-family: "Cardo";
-  font-size: 1.4rem;
+  font-style: medium;
+  font-size: 3rem;
   letter-spacing: -4%;
   vertical-align: top;
-  margin-top: -1.5rem;
-  margin-bottom: 5rem;
+  margin-bottom: 1em;
+  margin-top: 2em;
 }
 
 .subTitle {
