--- a/src/Pages/LoginPage/LoginPage.module.css
+++ b/src/Pages/LoginPage/LoginPage.module.css
@@ -1,17 +1,23 @@
 .background {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 110%;
   top: 0;
   left: 0;
   display: grid;
   grid-template-rows: 20% 20% 20% 20% 20%;
   grid-template-columns: 20% 10% 40% 10% 20%;
+  background-image: url("https://i.ibb.co/JtN66zK/Hassan-2.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right ;
+  background-size: 105%;
+
 }
 
 .logo {
   position: fixed;
-  width: 5vw;
+  width: 15vw;
   left: 1vw;
   top: 1vw;
 }
@@ -32,23 +38,9 @@
 .buttonAlign {
   margin-left: 13em;
   align-items: center;
-  margin-top: 5em;
   grid-row-start: 3;
   grid-column-start: 3;
+  border-radius: 2em;
 }
 
 
-.banner {
-  border-top: 0.15em solid;
-  border-color: #00675b;
-  position: fixed;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  height: 40%;
-  z-index: -1;
-  grid-row-start: 4;
-  grid-row-end: 5;
-  background-color: #112a12;
-  
-}
