--- a/src/Pages/CoachDashboard/CoachDashboard.module.css
+++ b/src/Pages/CoachDashboard/CoachDashboard.module.css
@@ -41,8 +41,37 @@
   align-items: flex-start;
   justify-content: center;
   margin: auto;
-  margin-bottom: 3em; 
+  margin-bottom: .2vw; 
   width: 40vw;
+    /* Starting position */
+    -moz-transform:translateX(100%);
+    -webkit-transform:translateX(100%);  
+    transform:translateX(100%);
+    /* Apply animation to this element */  
+    -moz-animation: example1 10s linear infinite;
+    -webkit-animation: example1 10s linear infinite;
+    animation: example1 10s linear infinite;
+   }
+   /* Move it (define the animation) */
+   @-moz-keyframes example1 {
+    0%   { -moz-transform: translateX(100%); }
+    100% { -moz-transform: translateX(-100%); }
+   }
+   @-webkit-keyframes example1 {
+    0%   { -webkit-transform: translateX(100%); }
+    100% { -webkit-transform: translateX(-100%); }
+   }
+   @keyframes example1 {
+    0%   { 
+    -moz-transform: translateX(100%); /* Firefox bug fix */
+    -webkit-transform: translateX(100%); /* Firefox bug fix */
+    transform: translateX(100%);     
+    }
+    100% { 
+    -moz-transform: translateX(-100%); /* Firefox bug fix */
+    -webkit-transform: translateX(-100%); /* Firefox bug fix */
+    transform: translateX(-100%); 
+    }
 }
 
 .energiserName {
@@ -56,11 +85,11 @@
   border: 0.1em solid;
   border-color: #1d5b40 !important;
   font-size: 1em;
-  padding: 0 10px;
   height: 2em !important;
   display: block;
   width: 10vw;
   margin: auto;
+  margin-bottom: 3vw;
   background-color: rgb(193, 218, 215, 0.3);
  
 }
