name styling changed slightly

--- a/src/Pages/CoachDashboard/CoachDashboard.module.css
+++ b/src/Pages/CoachDashboard/CoachDashboard.module.css
@@ -75,9 +75,8 @@
 }
 
 .energiserName {
-   margin-top: 10em; 
-  font-size: large;
-  margin: auto;
+  font-size: 2vw;
+  margin: auto 0 .7vw 2vw
 
 }
 
