--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -6,13 +6,13 @@
 
 .link {
   width: 100%;
-  height: 4em;
+  height: 5vw;
   display: flex;
   align-items: center;
   /* justify-content: center; */
   font-weight: bold;
   font-family: "Josefin Sans";
-  font-size: larger;
+  font-size: 1vw;
   border-right: 1em solid #fff;
 }
 
@@ -27,9 +27,8 @@
 }
 
 .icon {
-  width: 1em;
-  height: 1em;
-  margin: 1em;
+  width: 5vw  ;
+  height: 5vw   ;
   display: flex;
   justify-content: center;
   align-items: center;
