--- a/src/Pages/ReadingListPage/ReadingListPage.module.css
+++ b/src/Pages/ReadingListPage/ReadingListPage.module.css
@@ -31,8 +31,10 @@
   border: 3px solid;
   border-radius: 1em;
   background-color: #f1f2f4;
-  margin: 1.5em;
+  margin-bottom: 1.5em;
+  margin-top: 1.5em;
   box-shadow: 0 3px 3px 0;
+  max-width: 65vw;
 }
 
 .title {
@@ -43,11 +45,12 @@
 }
 
 .thumbnail {
-  width: 25vw;
+  width: auto;
+  height: 25vh;
   grid-column: 2;
-  grid-row: 2 / span 6;
+  grid-row: 1 / span 6;
   border-radius: 1em;
-  margin-left: 1em;
+  margin: auto;
 }
 
 .description {
