margin fixed in lecture recordings page

--- a/src/Pages/LectureRecordingsPage/LectureRecordingsPage.module.css
+++ b/src/Pages/LectureRecordingsPage/LectureRecordingsPage.module.css
@@ -32,8 +32,10 @@
   border: 3px solid;
   border-radius: 1em;
   background-color: #f1f2f4;
-  margin: 1.5em;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
   box-shadow: 0 3px 3px 0;
+  width: 65vw;
 }
 
 .title {
